website/style.css
* {
  box-sizing: border-box;
}

body {
  background-color: #44606f;
  height: 100%;
  margin: 0px;
  margin-bottom: 70px;
  padding: 0px;
  width: 100%;
}

.header {
  background-color: #1b262c;
  font-family: Segoe UI, Arial, sans-serif;
  font-size: 18px;
  left: 0;
  line-height: 25px;
  overflow: hidden;
  padding: 20px 10px;
  text-align: center;
  top: 0;
}

.header a {
  float: left;
}

.header-title {
  width: 75%;
  padding: 0px;
}

.logo {
  border-radius: 0px;
  float: left;
  margin: 0px;
  margin-top: 5px;
  padding: 0px;
}

.header-link a {
  border-radius: 5px;
  color: #bbe1fa;
  float: right;
  margin: 0px 5px;
  padding: 12px;
  text-decoration: none;
}

.header-link a:hover {
  background-color: #0f4c75;
}

.main-rule {
  border: 2px solid #1b262c;
  border-radius: 2px;
  width: 80%;
}

.sub-rule {
  border: 1px solid #1b262c;
  border-radius: 2px;
  margin-bottom: 0;
  width: 30%;
}

.report-section {
  float: left;
  overflow: auto;
}

.report-img {
  border: 2px solid #0f4c75;
  border-radius: 4px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.inline-img {
  border: 2px solid #0f4c75;
  border-radius: 4px;
  float: left;
}

#registration {
  border: 2px solid #bbe1fa;
}

.content-body {
  background-color: #cce6ff;
  border-radius: 10px;
  color: #0f4c75;
  display: flex;
  flex-direction: column;
  font-family: Segoe UI, Arial, sans-serif;
  margin: auto;
  margin-bottom: 10px;
  margin-top: 10px;
  padding: 10px;
  width: 90%;
}

.content-header-1 {
  color: #0f4c75;
  font-size: 42px;
  text-align: center;
}

.content-header-2 {
  font-size: 24px;
  text-align: center;
}

.content-header-3 {
  font-size: 20px;
  text-align: left;
}

.content-text, .content-text-img {
  font-size: 18px;
}

.content-text-img {
  float: left;
  margin-right: 2%;
  padding: 0px 10px;
  width: 50%;
}

.product-slideshow {
  margin: auto;
  max-width: 1000px;
  position: relative;
}

.slide {
  display: none;
}

.slide-image {
  border-radius: 4px;
  width: 100%;
}

.prev, .next {
  border-radius: 0 9px 9px 0;
  color: #0f4c75;
  cursor: pointer;
  font-size: 18px;
  font-weight: bold;
  margin-top: -22px;
  padding: 16px;
  position: absolute;
  top: 50%;
  transition: 0.6s ease;
  user-select: none;
  width: auto;
}

.next {
  border-radius: 3px 0 0 3px;
  right: 0;
}

.prev:hover, .next:hover {
  background-color: rgba(27, 38, 44, 0.8);
}

.slide-caption {
  bottom: 8px;
  color: #0f4c75;
  font-size: 18px;
  padding: 50px 12px;
  position: absolute;
  text-align: center;
  width: 100%;
}

.slideshow-dot {
  background-color: #bbb;
  border-radius: 50%;
  cursor: pointer;
  display: inline-block;
  height: 15px;
  margin: 0 2px;
  position: relative;
  transition: background-color 0.6s ease;
  width: 15px;
  z-index: 2;
}

.active, .slideshow-dot:hover {
  background-color: #0f4c75;
}

.fade {
  animation-name: fade;
  animation-duration: 1.5s;
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

.caption {
  font-size: 14px;
  margin-top: 0px;
  text-align: center;
}

.register-text {
  font-size: 20px;
}

.asterisk {
  color: #ff0000;
}

.content-register {
  background-color: #cce6ff;
  border-radius: 10px;
  color: #0f4c75;
  font-family: Segoe UI, Arial, sans-serif;
  margin: auto;
  margin-bottom: 10px;
  margin-top: 10px;
  overflow: hidden;
  padding: 10px;
  width: 60%;
}

.registration-form {
  box-sizing: border-box;
  font-size: 18px;
  padding: 10px 20px;
}

.register-row {
  margin-top: 5px;
  width: 100%;
}

.register-col-1 {
  float: left;
  margin-top: 5px;
  width: 25%;
}

.register-col-2 {
  float: left;
  margin-top: 5px;
  width: 75%;
}

label {
  padding: 10px 10px 10px 0px;
}

.form-box {
  border: 2px solid #0f4c75;
  border-radius: 2px;
  display: inline;
  font-family: Segoe UI, Arial, sans-serif;
  resize: vertical;
  padding: 10px;
  width: 100%;
}

.form-box:focus {
  border-color: #bbe1fa;
}

.form-address-box {
  border: 2px solid #0f4c75;
  border-radius: 2px;
  display: inline;
  font-family: Segoe UI, Arial, sans-serif;
  resize: vertical;
  padding: 10px;
  width: 80%;
}

#address-postcode {
  width: 40%;
}

.form-address-box:focus {
  border-color: #bbe1fa;
}

.registration-form select {
  font-family: Segoe UI, Arial, sans-serif;
  width: 30%;
}

.register-submit {
  background-color: #F0F0F0;
  border: 2px solid #0f4c75;
  border-radius: 4px;
  color: #0f4c75;
  cursor: pointer;
  float: right;
  font-family: Segoe UI, Arial, sans-serif;
  font-weight: bolder;
  margin-top: 5px;
  padding: 12px 20px;
}

.register-submit:hover {
  background-color: #0f4c75;
  color: #F0F0F0;
}

.footer {
  background-color: #1b262c;
  bottom: 0;
  clear: both;
  height: 60px;
  overflow: hidden;
  padding: 10px 10px;
  position: fixed;
  width: 100%;
}

.footer-content {
  color: #bbe1fa;
  font-family: Segoe UI, Arial, sans-serif;
  font-size: 16px;
  font-weight: normal;
  text-align: center;
}

@media screen and (max-width: 500px) {

  .header a {
    float: none;
    margin: 0;
  }

  .header-link {
    float: none;
    padding-top: 20px;
  }

  .content-register {
    width: 80%;
  }

  .slide-caption {
    padding: 40px 12px;
  }

  .inline-img {
    display: block;
    float: none;
    height: 70%;
    margin-left: auto;
    margin-right: auto;
    width: 70%;
  }

  .content-text-img {
    width: 100%;
  }

}

@media screen and (max-width: 1000px) {

  .content-register {
    width: 80%;
  }

  .register-col-1, .register-col-2 {
    margin-top: 0px;
    width: 100%;
  }

  .registration-form select {
    width: 60%;
  }

}

